# rustbucket

./: .gitignore  CLAUDE.md  Cargo.toml  Config.toml  Config.toml.example  Dockerfile  README.md  config.toml  config.toml.example  tatu
.github/workflows/: ci.yml
design/: architecture.md  chatgpt-integration.md  deployment.md  instance-registration.md  logging-system.md  protocol-simulation.md  system-overview.md
src/: chatgpt.rs  config.rs  handler.rs  log_batcher.rs  log_collector.rs  log_compressor.rs  log_uploader.rs  main.rs  prelude.rs  registration.rs  utils.rs
