[package]
name = "rustbucket"
description = "A simple Rust-based honeypot. Use at your own risk."
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jamesbinford/rustbucket"
exclude = [
    "Config.toml",
]

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
figment = { version = "0.10.19", features = ["toml"] }
reqwest = { version = "0.12.9", features = ["json"] }
config = "0.14.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
flate2 = "1.0"
aws-sdk-s3 = "1.0"
aws-config = "1.0"
aws-smithy-types = "1.0"
