[package]
name = "rustbucket"
description = "A simple Rust-based honeypot. Use at your own risk."
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jamesbinford/rustbucket"
exclude = [
    "Config.toml",
]

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
figment = { version = "0.10.19", features = ["toml"] }
reqwest = { version = "0.12.10", features = ["json"] }
config = "0.14.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
flate2 = "1.1.2"
aws-sdk-s3 = "1.92.0"
aws-smithy-types = "1.3.2"
aws-config = "1.8.0"
aws-smithy-runtime-api = "1.8.1"
async-trait = "0.1.88"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4.4"
